--- a/src/index.css
+++ b/src/index.css
@@ -44,12 +44,23 @@ html {
 
 body {
 	position: relative;
-	min-width: 320px;
-	min-height: 100vh;
 	font-family: "Open Sans", sans-serif;
+	color: #1c1c1c;
 	font-size: 12px;
 	font-weight: 400;
 	line-height: 1.2;
+	background-color: #fff;
+}
+
+#root {
+	min-width: 320px;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+}
+
+main {
+	flex-grow: 1;
 }
 
 img,
@@ -59,11 +70,17 @@ svg {
 	height: auto;
 }
 
+svg {
+	max-height: 100%;
+}
+
 button {
 	padding: 0;
 	cursor: pointer;
 	border: 0;
 	background-color: transparent;
+	display: flex;
+	flex-direction: column;
 }
 
 a {
