--- a/src/views/Header/Header.module.sass
+++ b/src/views/Header/Header.module.sass
@@ -1,3 +1,7 @@
+.header
+	padding-top: 16px
+	padding-bottom: 16px
+	border-bottom: 1px solid #eeeef2
 .container
 	display: grid
 	gap: 16px
@@ -10,7 +14,14 @@
 		align-items: center
 .logo
 	grid-area: logo
+	width: 94px
 .search
 	grid-area: search
+	width: 100%
+	@media (min-width: 820px)
+		max-width: 408px
+		justify-self: center
+	@media (min-width: 1120px)
+		max-width: 514px
 .navigation
 	grid-area: navigation
