--- a/src/index.css
+++ b/src/index.css
@@ -107,3 +107,11 @@ fieldset {
 	position: fixed;
 	transform: scale(0);
 }
+
+main {
+	padding-bottom: 80px;
+
+	@media (min-width: 820px) {
+		padding-bottom: 100px;
+	}
+}
