--- a/src/components/Card/Card.module.sass
+++ b/src/components/Card/Card.module.sass
@@ -11,7 +11,7 @@
 	@media (min-width: 820px)
 		display: grid
 		grid-template-columns: 66% 1fr
-		gap: 40px 16pxContainer
+		gap: 40px 16px
 
 .title
 	font-size: 24px
@@ -44,9 +44,6 @@
 	font-size: 16px
 	font-weight: 400
 	margin-bottom: 4px
-
-.characteristics-table
-	margin-bottom: 24px
 
 .btns
 	display: flex
