--- a/src/components/SearchForm/SearchForm.module.sass
+++ b/src/components/SearchForm/SearchForm.module.sass
@@ -14,6 +14,8 @@
 		color: #969eae
 	&:focus-visible, &:hover
 		border-color: #dfe3eb
+	&::-webkit-search-cancel-button
+		display: none
 .button
 	position: absolute
 	top: 50%
